deploy/yandex-cloud/k8s/06-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: skycast
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: admin
      port: 9644
      targetPort: 9644
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: skycast
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: redpandadata/redpanda:v24.1.11
          imagePullPolicy: IfNotPresent
          command: ["rpk", "redpanda", "start"]
          args:
            - --mode=dev-container
            - --node-id=0
            - --smp=1
            - --memory=256M
            - --kafka-addr=PLAINTEXT://0.0.0.0:9092
            - --advertise-kafka-addr=PLAINTEXT://kafka.skycast.svc.cluster.local:9092
            - --rpc-addr=0.0.0.0:33145
            - --advertise-rpc-addr=kafka-0.kafka.skycast.svc.cluster.local:33145
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 9644
              name: admin
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 1
              memory: 768Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/redpanda/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
